Bump felles
Bumps [felles](https://github.com/navikt/familie-kontrakter) from 2.0_20220222213922_64795e8 to 2.0_20220609092924_6265395.
- [Release notes](https://github.com/navikt/familie-kontrakter/releases)
- [Commits](https://github.com/navikt/familie-kontrakter/commits)

---
updated-dependencies:
- dependency-name: no.nav.familie.kontrakter:felles
  dependency-type: direct:production
...

Signed-off-by: dependabot[bot] <support@github.com>